# changing-heat-extremes

./: .gitignore  00_get_era_daily_tmax.py  01_process_era.py  0_era_meanshift.py  0_era_medianshift.py  1_era_obs_delta.py  2_era_moments.py  pyproject.toml  ts_example.py
analysis/: 02_era_climatology.py  0_era_meanshift.py  1_era_obs_delta.py  2a_get_moments.py  2b_moment_maps.py  2c_heatmap_figs.py  2d_scatter_figs.py
deprecated/: 0_era_meanshift_ref19601990.py  0_era_medianshift_doy.py  1_era_medianshift.py
src/changing_heat_extremes/: analysis_helpers.py  flags.py  plot_helpers.py
supplemental/: doy_climatology_smoothing.py  threshold_period_maps.py  ts_central_africa.py  ts_example.py
