[project]
dependencies = []
name = "changing-heat-extremes"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
changing_heat_extremes = { path = ".", editable = true }
hdp-python = {path = "/mnt/misc-drive/Projects/HDP", editable = true}

[tool.pixi.tasks]

[tool.pixi.activation.env]
# needed to fix a common error when importing regionmask / geopandas
PROJ_DATA = "$CONDA_PREFIX/share/proj"
PROJ_LIB = "$CONDA_PREFIX/share/proj"

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = "<2.4"
gdal = ">=3.12.1,<4"
libgdal-core = ">=3.12.1,<4"
pyproj = ">=3.7.2,<4"
regionmask = ">=0.13.0,<0.14"



